resumiendo if-elif-else con firstof

--- a/core/templates/ranking_municipio.html
+++ b/core/templates/ranking_municipio.html
@@ -6,19 +6,20 @@
                 <div class="row">
                     {% if periodo_list|keyvalue:year == 'I' %}
                         {% for row in otros|dictsortreversed:'asignado_percent' %}
-                            {% if forloop.first and municipio.slug|lower == row.gasto__municipio__slug|lower or forloop.first and municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
+                            {% if forloop.first and municipio.slug|lower == row.gasto__municipio__slug|lower or forloop.first and municipio.slug|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio.slug|lower == row.inversion__municipio__slug|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">
+                                                {{ row.asignado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -29,28 +30,30 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">
+                                                {{ row.asignado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
-                            {% elif  municipio.slug|lower == row.gasto__municipio__slug|lower or municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
+                            {% elif  municipio.slug|lower == row.gasto__municipio__slug|lower or municipio.slug|lower == row.ingreso__municipio__nombre|lower or municipio.slug|lower == row.inversion__municipio__slug|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">
+                                                {{ row.asignado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -63,12 +66,13 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.asignado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">
+                                                {{ row.asignado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -76,19 +80,18 @@
                         {% endfor %}
                     {% else %}
                         {% for row in otros|dictsortreversed:'ejecutado_percent' %}
-                            {% if forloop.first and municipio.slug|lower == row.gasto__municipio__slug|lower or forloop.first and municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
+                            {% if forloop.first and municipio.slug|lower == row.gasto__municipio__slug|lower or forloop.first and municipio.slug|lower == row.ingreso__municipio__nombre|lower or forloop.first and municipio.slug|lower == row.inversion__municipio__slug|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -99,28 +102,26 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
-                            {% elif  municipio.slug|lower == row.gasto__municipio__slug|lower or municipio.slug|lower == row.ingreso__municipio__nombre|lower %}
+                            {% elif  municipio.slug|lower == row.gasto__municipio__slug|lower or municipio.slug|lower == row.ingreso__municipio__nombre|lower or municipio.slug|lower == row.inversion__municipio__slug|lower %}
                                 <div class="col-lg-12 col-md-12 col-sm-12 draw">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-center mt-1 pt-0_8">
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
@@ -133,12 +134,11 @@
                                             <span class="font-35px">{{ forloop.counter }}</span>
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6 text-right mt-1">
-                                            {% if row.ingreso__municipio__nombre %}
-                                                <p class="font-17px">{{ row.ingreso__municipio__nombre }}</p>
-                                            {% else %}
-                                                <p class="font-17px">{{ row.gasto__municipio__nombre }}</p>
-                                            {% endif %}
-                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }} M. de C&oacute;rdobas</p>
+                                            <p class="font-17px">
+                                                {% firstof row.gasto__municipio__slug row.ingreso__municipio__nombre row.inversion__municipio__slug %}
+                                            </p>
+                                            <p class="font-17px info-box-number">{{ row.ejecutado_percent|floatformat:2|intcomma }}
+                                                M. de C&oacute;rdobas</p>
                                         </div>
                                     </div>
                                 </div>
