--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -681,5 +681,5 @@
 {% endblock %}
 
 {% block custom_scripts %}
-    {{ charts|load_charts:"pie, bar" }}
+    {{ charts|load_charts:"pie,bar,bar_horizontal" }}
 {% endblock %}
